--- a/ros1/src/magiclaw/CMakeLists.txt
+++ b/ros1/src/magiclaw/CMakeLists.txt
@@ -19,7 +19,7 @@ include_directories(
 )
 
 catkin_install_python(PROGRAMS
-  magiclaw/magiclaw_pub.py
+  scripts/magiclaw_pub.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
